Implemented CRUD operations for ghosts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=PhasmophobiaHelper
 
 spring.graphql.graphiql.enabled=true
 
+spring.datasource.url=LMAO_YOU_THOUGHT_I_WOULD_LEAVE
+spring.datasource.username=MY_USERNAME_AND
+spring.datasource.password=PASSWORD_HERE_XD
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
